<resources>
    <string name="app_name">Budget to Zero</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="main_navigation_category_back">View Previous Budget Category</string>
    <string name="main_navigation_category_next">View Next Budget Category</string>
    <string name="category_name">Category name:</string>
    <string name="update_category">Update Category</string>
    <string name="text_input_for_budget_amount">Budget amount</string>
    <string name="budget_amount">Budget Amount:</string>
    <string name="reset_frequency">Reset Frequency:</string>
    <string name="start_budgeting">Start Budgeting</string>
    <string name="add_category_title_error">Please add a category title</string>
    <string name="add_category_amount_error">Please add a budget amount</string>
    <string name="category_already_exists">A category with that name already exists</string>
    <string name="add_purchase">Add Purchase</string>
    <string name="add_purchase_day_of_week_header">What day of the week should the budget reset?</string>
    <string name="add_purchase_day_footer_head">You\'re budget will reset in </string>
    <string name="add_purchase_day_footer_tail_plural">days on </string>
    <string name="add_purchase_day_footer_tail_singular">day on </string>
    <string name="button_create_budget_based_on_input">Create budget based on input</string>
    <string name="select_wheel_how_often_to_reset_budget">Select wheel how often to reset budget</string>
    <string name="click_here_add_budget">Long Click to add a category</string>
    <string name="Summary">Summary</string>
    <string name="Purchase">Purchase</string>

    <string name="remaining_budget">Remaining Budget Balance:</string>
    <string name="description">Description:</string>
    <string name="total_spent">Total Spent:</string>
    <string name="new_remaining_budget">Remaining Budget:</string>
    <string name="purchase_date">Purchase Date:</string>
    <string name="remaining">Remaining</string>
    <string name="starting_amount">Starting Amount</string>
    <string name="ampersand">&amp;</string>

    <string name="menu_edit_purchase">Edit Purchase</string>
    <string name="menu_delete_purchase">Delete Purchase</string>
    <string name="menu_add">Add New Category</string>
    <string name="menu_edit">Edit Category</string>
    <string name="menu_reset">Reset Purchases</string>
    <string name="edit_summary_error">Cannot Edit Summary</string>
    <string name="reset_summary_error">Cannot Reset Summary</string>
    <string name="purchase_no_category">Please add a category first</string>
    <string name="purchase_no_spend_amount">Please add a spent amount to deduct from your budget</string>
    <string name="reset_confirm_title">Reset Category:</string>
    <string name="reset_confirm_clear_history">Are you sure you would like to clear your purchases and reset the balance for the period? </string>
    <string name="reset_confirm_spend_only">Are you sure you would like to reset the balance for the period? </string>
    <string name="delete_confirm">Are you sure you would like to delete your purchase of </string>
    <string name="reset_confirm_confirm">Confirm</string>

    <string name="settings_header">Manage Settings:</string>
    <string name="Save">Save</string>
    <string name="clear_history_on_reset">Delete purchase history when category resets </string>
    <string name="display_currency_symbol">Display Currency Symbol</string>
    <string name="first_day_of_week">S</string>
    <string name="second_day_of_week">M</string>
    <string name="third_day_of_week">T</string>
    <string name="fourth_day_of_week">W</string>
    <string name="fifth_day_of_week">T</string>
    <string name="sixth_day_of_week">F</string>
    <string name="seventh_day_of_week">S</string>

    <string name="ahead_of_spending">You are ahead on your spending.</string>
    <string name="on_track">You are under budget. Good job!</string>
    <string name="over_budget">You are over budget.</string>

    <string name="description_delete_category">Button to delete the selected category</string>
    <string-array name="budget_frequency_array">
        <item>Never</item>
        <item>Monthly</item>
        <item>Bimonthly</item>
        <item>Biweekly</item>
        <item>Weekly</item>
        <item>Daily</item>
    </string-array>

</resources>