<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/button_create_budget_based_on_input"
    tools:visibility="visible">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="88dp"
        android:labelFor="@+id/editTextDescription"
        android:text="@string/category_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="12dp"
        android:autofillHints="text"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/text_input_for_budget_amount"
        android:labelFor="@+id/editTextTotalSpent"
        android:text="@string/budget_amount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDescription" />

    <EditText
        android:id="@+id/editTextTotalSpent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.417"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="36dp"
        android:text="@string/reset_frequency"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTotalSpent" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="326dp"
        android:layout_height="48dp"
        android:contentDescription="@string/select_wheel_how_often_to_reset_budget"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.056" />

    <Button
        android:id="@+id/addNewCatagoryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="172dp"
        android:onClick="createBudgetClicked"
        android:text="@string/start_budgeting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        tools:ignore="UsingOnClickInXml" />

    <LinearLayout
        android:id="@+id/dayOfWeekLayout"
        android:layout_width="357dp"
        android:layout_height="117dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/addNewCatagoryButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        android:visibility="gone">

        <Button
            android:id="@+id/buttonSunday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/first_day_of_week"
            android:background="#cfcfcf"
            android:onClick="dayOfWeekClicked"
            android:layout_margin="2dp"/>

        <Button
            android:id="@+id/buttonMonday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/second_day_of_week"
            android:background="#cfcfcf"
            android:onClick="dayOfWeekClicked"
            android:layout_margin="2dp"/>

        <Button
            android:id="@+id/buttonTuseday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/third_day_of_week"
            android:background="#cfcfcf"
            android:onClick="dayOfWeekClicked"
            android:layout_margin="2dp"/>

        <Button
            android:id="@+id/buttonWednesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fourth_day_of_week"
            android:background="#cfcfcf"
            android:onClick="dayOfWeekClicked"
            android:layout_margin="2dp"/>

        <Button
            android:id="@+id/buttonThursday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fifth_day_of_week"
            android:background="#cfcfcf"
            android:onClick="dayOfWeekClicked"
            android:layout_margin="2dp"/>

        <Button
            android:id="@+id/buttonFriday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sixth_day_of_week"
            android:background="#cfcfcf"
            android:onClick="dayOfWeekClicked"
            android:layout_margin="2dp"/>

        <Button
            android:id="@+id/buttonSaturday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/seventh_day_of_week"
            android:background="#cfcfcf"
            android:onClick="dayOfWeekClicked"
            android:layout_margin="2dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>